--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <source src="images/trf.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video></div>
-          <!-- <img src='images/trf.jpg' width="160"> -->
+          <img src='images/trf.jpg' width="160">
         </div>
         <script type="text/javascript">
           function trf_start() {
