--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
        <!-- bgcolor="#ffffd0"> -->
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
-          <div class="two" id='trf_image'><video  width=100% height=100% muted autoplay loop>
-          <source src="images/trf.mp4" type="video/mp4">
+          <div class="two" id='trf_image'><video width=100% height=100% muted autoplay loop>
+          <source src="images/trf.m4v" type="video/mp4">
           Your browser does not support the video tag.
           </video></div>
-          <source src="images/trf.mp4" type="video/mp4">
+          <!-- <img src="images/trf.m4v" > -->
+          <source src="images/trf.m4v" type="video/mp4">
         </div>
         <script type="text/javascript">
           function trf_start() {
