--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
           <div class="two" id='trf_image'><video width=100% height=100% muted autoplay loop>
-          <source src="images/trf.m4v" type="video/mp4">
+          <source src="images/trf.gif" type="video/mp4">
           Your browser does not support the video tag.
           </video></div>
           <!-- <img src="images/trf.m4v" > -->
-          <source src="images/trf.m4v" type="video/mp4">
+          <img src="images/trf.gif" width="160">
         </div>
         <script type="text/javascript">
           function trf_start() {
@@ -157,7 +157,7 @@
           <!-- <source src="images/oft.mp4" type="video/mp4"> -->
           Your browser does not support the video tag.
           </video></div>
-          <img src='images/oft.png' width=100%>
+          <img src='images/oft.png' width="160">
         </div>
         <script type="text/javascript">
           function oft_start() {
