--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="two" id='interdyn_image'><video  width=100% muted autoplay loop>
           Your browser does not support the video tag.
           </video></div>
-          <img src='images/interdyn.png' width="160">
+          <img src='images/interdyn.jpg' width="160">
         </div>
         <script type="text/javascript">
           function interdyn_start() {
