--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
     <tr onmouseout="interdyn_stop()" onmouseover="interdyn_start()">
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
-          <div class="two" id='interdyn_image'><video  width=100% muted autoplay loop>
+          <div class="two" id='interdyn_image'><video width=100% height=100% muted autoplay loop>
+          <source src="images/interdyn.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video></div>
           <img src='images/interdyn.jpg' width="160">
