--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <source src="images/interdyn.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video></div>
-          <img src='images/interdyn.jpg' width="160">
+          <img src='images/interdyn.png' width="160">
         </div>
         <script type="text/javascript">
           function interdyn_start() {
@@ -153,7 +153,7 @@
         <br>
         (*Equal contribution ᐩProject lead)
         <br>
-        <em>Preprint</em>, 2025
+        <em>CVPR</em>, 2025
         <br>
         <a href="https://interdyn.is.tue.mpg.de/">project page</a> /
         <a href="https://arxiv.org/abs/2412.11785">arXiv</a>
