--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
         <div class="one">
           <div class="two" id="interdyn_image">
             <video width="100%" height="100%" muted autoplay loop>
-              <source src="images/interdyn.mp4" type="video/mp4">
+              <source src="images/InterDyn.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
           </div>
-          <img src="images/interdyn.png" width="160">
+          <img src="images/InterDyn.png" width="160">
         </div>
         <script type="text/javascript">
           function interdyn_start() {
