Update image / video overlay

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     <tr onmouseout="st4rtrack_stop()" onmouseover="st4rtrack_start()">
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
-          <div class="two" id='st4rtrack_image'><video width=100% height=100% muted autoplay loop>
+          <div class="two" id='st4rtrack_image'><video width=100% height=56.25% muted autoplay loop>
           <source src="images/st4rtrack.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video></div>
-          <img src='images/st4rtrack.png' width="0">
+          <img src='images/st4rtrack.png' width=100% height=56.25% >
         </div>
         <script type="text/javascript">
           function st4rtrack_start() {
