--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  I'm interested in machine learning, computer vision, computer graphics, and particularly in how to understand and recreate our physical world in a principled and generalized way. My research explores the underlying structures in visual data - from 3D/4D representations and geometric symmetries to symbolic abstractions, physical priors and beyond - to enable more controllable and interpretable AI systems. I focus on inverse graphics and controllable generation, often leveraging foundation models to bridge perception and synthesis.
+                  I'm interested in machine learning, computer vision, computer graphics, and particularly in how to understand and recreate our physical world in a principled and generalized way. My research explores the underlying structures in visual data - from 3D/4D representations and geometric symmetries to symbolic abstractions, physical priors and beyond - to enable more controllable and interpretable AI systems. I focus on inverse graphics and controllable generation, often leveraging foundation models.
                   <br>
                   <br>
                   Selected publications are listed below.
