--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  I'm interested in machine learning, computer vision, computer graphics, and particularly in how to understand and recreate our physical world in a principled and generalized way. My research explores the underlying structures in visual data - from 3D/4D representations and geometric symmetries to symbolic abstractions, physical priors and beyond - to enable more controllable and interpretable AI systems. I focus on inverse graphics and controllable generation, often leveraging foundation models.
-                  <br>
+                  I'm interested in machine learning, computer vision, and computer graphics—particularly in how we can understand and recreate the physical world in a principled and generalizable way. My research explores the underlying structures in visual data—from 3D/4D representations and group symmetries to symbolic abstractions, physical priors, and beyond—to enable more controllable and interpretable AI systems. I focus on inverse graphics and controllable generation, often investigating and leveraging foundation models.                  <br>
                   <br>
                   Selected publications are listed below.
 
@@ -120,7 +119,7 @@
         <a href="https://st4rtrack.github.io/">project page</a> /
         <a href="https://arxiv.org/abs/2504.13152">arXiv</a>
         <p>
-          What is the minimal representation required to model both geometry and correspondence of the 4D world? Could it be done in a unified framework? It turns out to be remarkably simple! By predicting two properly defined point maps—essentially reconstructing one frame's 3D moment in another frame's coordinates—We propose St4RTrack, a feed-forward framework that simultaneously reconstructs and tracks dynamic video content in a world coordinate from monocular video. 
+          What is the minimal representation required to model both geometry and correspondence of the 4D world? Could it be done in a unified framework? It turns out to be remarkably simple! We propose St4RTrack, a feed-forward framework that simultaneously reconstructs and tracks dynamic video content in a world coordinate from monocular video. 
         </p>
       </td>
     </tr>
