--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                    I was born and raised in Beijing.
                    <br>
                    <br>
-                   <span style="color: red;"><b>I will be on the job market in Spring 2025!</b></span>
+                   <span style="color: red;"><b>I'm on the job market now!</b></span>
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:havenfeng422@gmail.com">Email</a> &nbsp;/&nbsp;
@@ -69,7 +69,9 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  I'm interested in machine learning, computer vision, and computer graphics—particularly in how we can understand and recreate the physical world in a principled and generalizable way. My research explores the underlying structures in visual data—from 3D/4D representations and group symmetries to symbolic abstractions, physical priors, and beyond—to enable more controllable and interpretable AI systems. I focus on inverse graphics and controllable generation, often investigating and leveraging foundation models.                  <br>
+                  I'm interested in machine learning, computer vision, and computer graphics—particularly in how to understand and recreate the physical world in a generalizable way. My research explores the underlying structures in visual data—from 3D/4D representations and group symmetries to symbolic abstractions, physical priors, and beyond—to enable more controllable and interpretable AI systems. 
+                  Recently, I've been investigating how foundation models can better understand and simulate physical behaviors, bridging the gap between large-scale learning and principled physical reasoning.
+                  <br>
                   <br>
                   Selected publications are listed below.
 
@@ -119,7 +121,7 @@
         <a href="https://st4rtrack.github.io/">project page</a> /
         <a href="https://arxiv.org/abs/2504.13152">arXiv</a>
         <p>
-          What is the minimal representation required to model both geometry and correspondence of the 4D world? Could it be done in a unified framework? It turns out to be remarkably simple! We propose St4RTrack, a feed-forward framework that simultaneously reconstructs and tracks dynamic video content in a world coordinate from monocular video. 
+          What is the minimal representation required to model both geometry and correspondence of the 4D world? Could it be done in a unified framework? It turns out to be remarkably simple! We propose St4RTrack, a feed-forward framework that simultaneously reconstructs and tracks dynamic video content in a world coordinate from monocular video, embedding the 4D understanding into the transformer-based backbone.
         </p>
       </td>
     </tr>
@@ -160,7 +162,7 @@
         <a href="https://genlit-probingi2v.github.io/">project page</a> /
         <a href="https://arxiv.org/abs/2412.11224">arXiv</a>
         <p>
-          Could we reformulate single-image relighting as a video generation task? By leveraging video diffusion models and a small synthetic dataset, we achieve realistic relighting effects with cast shadows on real images <strong>without explicit 3D</strong>. Our work reveals the potential of foundation models in understanding physical properties and performing graphics tasks.
+          Could we reformulate single image near-field relighting as a video generation task? By leveraging video diffusion models and a small synthetic dataset, we achieve realistic relighting effects with cast shadows on real images <strong>without explicit 3D</strong>. Our work reveals the potential of foundation models in understanding physical properties and performing graphics tasks.
         </p>
       </td>
     </tr>
