--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <br>
         (*Equal contribution, listed alphabetically)
         <br>
-        <em>Preprint</em>, 2025
+        <em>SIGGRAPH Asia</em>, 2025
         <br>
         <a href="https://genlit-probingi2v.github.io/">project page</a> /
         <a href="https://arxiv.org/abs/2412.11224">arXiv</a>
